--- a/www/index.html
+++ b/www/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Lab 2</title>
+    <title>Judas Project</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css" />
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+<link rel="stylesheet" type="text/css" href="css/index.css" />
+<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript">
+            app.initialize();
+</script>
+<script type="text/javascript" src="js/bindings.js"></script>
+
+
 </head>
 <body>
 <!-- Start of first page -->
-<div data-role="page" id="foo">
+<div data-role="page" id="deviceready">
 
     <div data-role="header">
-        <h1>Foo</h1>
+        <h1>Judas Project</h1>
     </div><!-- /header -->
 
-    <div role="main" class="ui-content">
+    <div role="main" class="ui-content" id="loadingpage">Loading...</div>
+
+    <div role="main" class="ui-content" id="mainpage">
 
         <label for="text-1">Get a quote:</label>
         <input name="text-1" id="text1" value="1" type="text">
@@ -44,6 +53,8 @@
         <h4>Page Footer</h4>
     </div><!-- /footer -->
 </div><!-- /page -->
+
+
 
 </body>
 </html> 
