--- a/www/index.html
+++ b/www/index.html
@@ -9,17 +9,17 @@
 <link rel="stylesheet" type="text/css" href="css/index.css" /> 
 <script src="js/jquery-1.9.1.min.js"></script>
 <script src="js/jquery.mobile-1.4.2.min.js"></script>
+<script type="text/javascript">
+    document.addEventListener("deviceready", function(){
+        alert("deviceready");
+    },true);
+</script>
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/bindings.js"></script>
 
 
 </head>
 <body>
-
-    <div data-role="page" id="loadingpage">
-        <a href="#mainpage">Loading...</a>
-    </div>
-
 
     <!-- Start of first page -->
     <div data-role="page" id="mainpage">
@@ -54,10 +54,6 @@
             <h4>Page Footer</h4>
         </div><!-- /footer -->
     </div><!-- /page -->
-
-    <script type="text/javascript">
-            app.initialize();
-    </script>
 
 </body>
 
