one last try at loading

--- a/www/index.html
+++ b/www/index.html
@@ -9,9 +9,14 @@
 <link rel="stylesheet" type="text/css" href="css/index.css" /> 
 <script src="js/jquery-1.9.1.min.js"></script>
 <script src="js/jquery.mobile-1.4.2.min.js"></script>
+<script type="text/javascript" src="phonegap.js"></script>
+<script type="text/javascript">
+    document.addEventListener("deviceready", function(){
+        alert("Device Ready");
+    },true);
+</script>
 
 <script type="text/javascript" src="js/bindings.js"></script>
-
 
 </head>
 <body>
