--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
 
 
 
-    <!-- Start of first page -->
+    <!-- Start of login page, will not appear if already logged in -->
     <div data-role="page" id="login">
 
         <div role="main" class="ui-content">
@@ -71,23 +71,6 @@
             <h4>Page Footer</h4>
         </div><!-- /footer -->
     </div><!-- /page -->
-
-    <script type="text/javascript">
-        var loginButton = $('#login-with-facebook');
- 
-        loginButton.on('click', function(e) {
-            e.preventDefault();
-         
-            FB.login(function(response) {
-                if (response.status === 'connected') {
-                    alert('logged in');
-                } else {
-                    alert('not logged in');
-                }
-            },{ scope: "email" });
-         
-        });
-    </script>
 
 </body>
 
