changed slider to listview

--- a/www/index.html
+++ b/www/index.html
@@ -29,8 +29,11 @@
 
         <!-- Slider panel -->
         <div data-role="panel" id="menu-panel" animate="true" display="reveal">
-            <h3>Selector Menu</h3>
-            <input type="button" class="FB-logout" id="logout-of-facebook" data-shadow="false" value="Logout of Facebook"/>
+            <ul data-role="listview">
+                <li data-role="list-divider">Selector Menu</li>
+                <li class="FB-login">Login with Facebook</li>
+                <li class="FB-logout">Logout</li>
+            </ul>
         </div>
 
         <button class="FB-login" id="login-with-facebook">Login with Facebook</button>
@@ -45,8 +48,11 @@
 
         <!-- Slider panel -->
         <div data-role="panel" id="menu-panel" animate="true" display="reveal">
-            <h3>Selector Menu</h3>
-            <input type="button" class="FB-logout" id="logout-of-facebook" data-shadow="false" value="Logout of Facebook"/>
+            <ul data-role="listview">
+                <li data-role="list-divider">Selector Menu</li>
+                <li class="FB-login">Login with Facebook</li>
+                <li class="FB-logout">Logout</li>
+            </ul>
         </div>
 
         <div role="main" class="ui-content">
@@ -71,9 +77,6 @@
 
         </div><!-- /content -->
 
-        <div data-role="footer">
-            <h4>Page Footer</h4>
-        </div><!-- /footer -->
     </div><!-- /page -->
 
 </body>
