--- a/www/index.html
+++ b/www/index.html
@@ -41,9 +41,9 @@
         <div role="main" class="ui-content" data-role="content">
 
             <div id="center-button" style="text-align: center;">
-                <button class="FB-login" id="login-with-facebook">Login with Facebook</button>
+                <button class="FB-login" id="login-with-facebook" data-inline="true">Login with Facebook</button>
 
-                 <a href="#mainpage" data-role="button" data-mini="true">Shortcut to mainpage (dev)</a>
+                 <a href="#mainpage" data-role="button" data-mini="true" data-inline="true">Shortcut to mainpage (dev)</a>
             </div>
 
         </div><!-- content-->
@@ -69,11 +69,25 @@
         <!-- Page content -->
         <div role="main" class="ui-content">
 
+            <!--Center button wrapper -->
             <div id="center-report" style="text-align: center;">
 
-                <button class="send-report">Report pest</button>
+                <!-- REPORT BUTTON -->
+                <a href="#popupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="check" data-theme="a">Report Pest</a>
+                <div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="a" data-dismissible="false" style="max-width:400px;" class="ui-corner-all">
+                    <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+                    <div data-role="header" data-theme="a" class="ui-corner-top">
+                        <h1>Send report?</h1>
+                    </div>
+                    <div data-role="content" data-theme="a" class="ui-corner-bottom ui-content">
+                        <h3 class="ui-title">Are you sure you want to report a pest?</h3>
+                        <p>This action cannot be undone.</p>
+                        <a href="#" data-role="button" data-inline="true" data-rel="back">Cancel</a>
+                        <button data-inline="true" data-rel="back" id="send-report">Report pest</button>
+                    </div>
+                </div><!--report button-->
 
-            </div>
+            </div><!--center wrapper-->
 
         </div><!-- /content -->
 
