--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" src="phonegap.js"></script>
 <script type="text/javascript" src="js/facebook-js-sdk.js"></script>
 <script type="text/javascript" src="js/cdv-plugin-fb-connect.js"></script>
-<script type="text/javascript" src="js/bindings.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
 
 </head>
 <body>
