--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
         <div data-role="panel" id="menu-panel" animate="true" display="reveal">
             <ul data-role="listview">
                 <li data-role="list-divider">Selector Menu</li>
-                <li class="FB-login">Login with Facebook</li>
+                <li class="FB-loginmenu">Login with Facebook</li>
                 <li class="report-button">Report pest</li>
                 <li class="FB-logout">Logout</li>
             </ul>
@@ -59,7 +59,7 @@
         <div data-role="panel" id="main-menu-panel" animate="true" display="reveal">
             <ul data-role="listview">
                 <li data-role="list-divider">Selector Menu</li>
-                <li class="FB-login">Login with Facebook</li>
+                <li class="FB-loginmenu">Login with Facebook</li>
                 <li class="report-button">Report pest</li>
                 <li class="FB-logout">Logout</li>
             </ul>
