added email instead of id, added loading widget and on swipe

--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
     <div data-role="page" id="login">
 
         <!-- Slider panel -->
-        <div data-role="panel" id="menu-panel" animate="true" display="reveal">
+        <div data-role="panel" id="login-panel" animate="true" display="reveal">
             <ul data-role="listview">
                 <li data-role="list-divider">Selector Menu</li>
                 <li class="FB-loginmenu">Login with Facebook</li>
@@ -56,7 +56,7 @@
 
 
         <!-- Slider panel -->
-        <div data-role="panel" id="main-menu-panel" animate="true" display="reveal">
+        <div data-role="panel" id="report-panel" animate="true" display="reveal">
             <ul data-role="listview">
                 <li data-role="list-divider">Selector Menu</li>
                 <li class="FB-loginmenu">Login with Facebook</li>
