fixed broken panel href

--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
 
         <!-- Universal header -->
         <div data-role="header" data-position="fixed">
-                <a href="#menu-panel" data-icon="bars">Menu</a>
+                <a href="#login-panel" data-icon="bars">Menu</a>
                 <h1>The Judas Project</h1>
         </div>
 
@@ -67,7 +67,7 @@
 
         <!-- Universal header -->
         <div data-role="header" data-position="fixed">
-                <a href="#main-menu-panel" data-icon="bars">Menu</a>
+                <a href="#report-panel" data-icon="bars">Menu</a>
                 <h1>The Judas Project</h1>
         </div>
 
