--- a/www/index.html
+++ b/www/index.html
@@ -42,14 +42,20 @@
         <div role="main" class="ui-content" data-role="content">
 
             <div id="center-button" style="text-align: center;">
-                <button class="FB-login" id="login-with-facebook" data-inline="true">Login with Facebook</button>
 
+                <button class="FB-login" id="login-with-facebook" data-inline="true">Login with Facebook</button>
+                <div data-role="collapsible" id="collapse-why-facebook" data-collapsed-icon="info" data-expanded-icon="info">
+                    <h4>Why Facebook?</h4>
+                    <p>The Judas Project requires that you are logged into Facebook before you can report any pests that you spot.<br>
+                    This is only so that we can isolate users that appear to be dishonest with their submissions.<br>
+                    Your Facebook ID is obscured so that we can never identify you personally.</p>
+                </div>
+
+                <!-- remove before production -->
                  <a href="#mainpage" data-role="button" data-mini="true" data-inline="true">Shortcut to mainpage (dev)</a>
             </div>
 
         </div><!-- content-->
-
-        
 
     </div>
 
