--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="css/judas.min.css" />
 <link rel="stylesheet" href="css/jquery.mobile.icons.min.css" />
 <script src="js/jquery.mobile-1.4.2.min.js"></script>
+<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 <script type="text/javascript" src="phonegap.js"></script>
 <script type="text/javascript" src="js/facebook-js-sdk.js"></script>
 <script type="text/javascript" src="js/cdv-plugin-fb-connect.js"></script>
@@ -85,6 +86,16 @@
             <!--Center button wrapper -->
             <div id="center-report" style="text-align: center;">
 
+                <!-- Image Carousel -->
+                <div class="carousel-pest">
+                  <div><a href="#"><img class="img-carousel" src="img/lazyfonz1.png"/></a></div>
+                  <div><a href="#"><img class="img-carousel" src="img/lazyfonz2.png"/></a></div>
+                  <div><a href="#"><img class="img-carousel" src="img/lazyfonz3.png"/></a></div>
+                  <div><a href="#"><img class="img-carousel" src="img/lazyfonz4.png"/></a></div>
+                  <div><a href="#"><img class="img-carousel" src="img/lazyfonz5.png"/></a></div>
+                  <div><a href="#"><img class="img-carousel" src="img/lazyfonz6.png"/></a></div>
+                </div>
+
                 <!-- REPORT BUTTON -->
                 <a href="#popupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="check" data-theme="a">Report Pest</a>
                 <div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="a" data-dismissible="false" style="max-width:400px;" class="ui-corner-all">
@@ -100,12 +111,15 @@
                     </div>
                 </div><!--report button-->
 
+                
+
             </div><!--center wrapper-->
 
         </div><!-- /content -->
 
     </div><!-- /page -->
 
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script type="text/javascript" src="js/init.js"></script>
 
 </body>
