--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
 
 
 </head>
+<body background="img/NZbg.png" style="background-repeat: no-repeat; background-size: 100%;">
 <body>
 
     <!-- Start of login page, will not appear if already logged in -->
