--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 
 
 </head>
-<body background="img/NZbg.png" style="background-repeat: no-repeat; background-size: 100%;">
+<body  style="background-repeat: no-repeat; background-size: 100%;">
 
     <!-- Start of login page, will not appear if already logged in -->
     <div data-role="page" id="login">
@@ -54,11 +54,18 @@
                         This is only so that we can isolate users that appear to be dishonest with their submissions.<br>
                         Your Facebook ID is obscured so that we can never identify you personally.</p>
                 </div>  
+                    <div>
+                        <img id="rabbit" src="img/Rabbit_Yo.png">
+                        <img id="possum" src="img/Possum_hey.png">
+                        <img id="stoat" src="img/Stoat_hmm.png">
+                        <img id="other" src="img/Other_ItsAnAnt.png">
+                
+                    </div>
 
-                <!-- remove before production -->
+                <!-- remove before production 
                  <a href="#mainpage" data-role="button" data-mini="true" data-inline="true">Shortcut to mainpage (dev)</a>
                  <a href="#pestpage" data-role="button" data-mini="true" data-inline="true">Pest Information</a>
-                 <!-- REMOVE before production -->
+                 REMOVE before production -->
             </div>
 
         </div><!-- content-->
