--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,6 @@
 <link rel="stylesheet" href="css/judas.css" />
 <link rel="stylesheet" href="css/jquery.mobile.icons.min.css" />
 <script src="js/jquery.mobile-1.4.2.min.js"></script>
-<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 <script type="text/javascript" src="phonegap.js"></script>
 <script type="text/javascript" src="js/facebook-js-sdk.js"></script>
 <script type="text/javascript" src="js/cdv-plugin-fb-connect.js"></script>
@@ -88,17 +87,14 @@
         <div role="main" class="ui-content">
 	
 			<div>
-                <img id="rabbit" src="img/Rabbit_Yo.png"></a>
-                <img id="possum" src="img/Possum_hey.png">
-                <img id="stoat" src="img/Stoat_hmm.png">
-                <img id="other" src="img/Other_ItsAnAnt.png">
+                <a href="#popupDialog" data-rel="popup"><img class="main-image" id="rabbit" src="img/Rabbit_Yo.png"></a>
+                <a href="#popupDialog" data-rel="popup"><img class="main-image" id="possum" src="img/Possum_hey.png"></a>
+                <a href="#popupDialog" data-rel="popup"><img class="main-image" id="stoat" src="img/Stoat_hmm.png"></a>
+                <a href="#popupDialog" data-rel="popup"><img class="main-image" id="other" src="img/Other_ItsAnAnt.png"></a>
         
             </div>
 
-                <!-- REPORT BUTTON -->
-
-				<!-- REPORT BUTTON --><!--
-            <a href="#popupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="check" data-theme="a">Report Pest</a>
+				<!-- REPORT BUTTON -->
             <div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="a" data-dismissible="false" style="max-width:400px;" class="ui-corner-all">
                 <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
                 <div data-role="header" data-theme="a" class="ui-corner-top">
@@ -110,8 +106,7 @@
                     <a href="#" data-role="button" data-inline="true" data-rel="back">Cancel</a>
                     <button data-inline="true" data-rel="back" id="send-report">Report pest</button>
                 </div>
-            </div>--><!--report button-->
-                <!--report button-->
+            </div><!--report button-->
 
         </div><!-- /content -->
 
@@ -158,7 +153,6 @@
 
     </div>
 
-    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script type="text/javascript" src="js/init.js"></script>
 
 
