--- a/www/index.html
+++ b/www/index.html
@@ -48,10 +48,8 @@
 
                 <a href="#popupFacebook" data-rel="popup" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-inline" data-transition="pop" data-position-to="window">Basic Popup</a>
                 <div data-role="popup" id="popupFacebook" class="ui-content">
-                    <h4>Why Facebook?</h4>
-                    <p>SnapPest requires that you are logged into Facebook before you can report any pests that you spot.<br>
-                        This is only so that we can isolate users that appear to be dishonest with their submissions.<br>
-                        Your Facebook ID is obscured so that we can never identify you personally.</p>
+                    <h4>Your information will be kept private.</h4>
+                    <p></p>
                 </div>  
 
                  <a href="#mainpage" data-role="button" data-mini="true" data-inline="true">Shortcut to mainpage (dev)</a>
