changes images to divs, moved images to css folder

--- a/www/index.html
+++ b/www/index.html
@@ -85,10 +85,10 @@
         <div role="main" class="ui-content">
 	
 			<div>
-                <a href="#popupDialog" data-rel="popup"><img class="main-image" id="rabbit" src="img/Rabbit_Yo.png"></a>
-                <a href="#popupDialog" data-rel="popup"><img class="main-image" id="possum" src="img/Possum_hey.png"></a>
-                <a href="#popupDialog" data-rel="popup"><img class="main-image" id="stoat" src="img/Stoat_hmm.png"></a>
-                <a href="#popupDialog" data-rel="popup"><img class="main-image" id="other" src="img/Other_ItsAnAnt.png"></a>
+                <a href="#popupDialog" data-rel="popup"><div class="main-image" id="rabbit" ></div></a>
+                <a href="#popupDialog" data-rel="popup"><div class="main-image" id="possum" ></div></a>
+                <a href="#popupDialog" data-rel="popup"><div class="main-image" id="stoat" ></div></a>
+                <a href="#popupDialog" data-rel="popup"><div class="main-image" id="other" ></div></a>
         
             </div>
 
