--- a/www/index.html
+++ b/www/index.html
@@ -106,6 +106,11 @@
                 </div>
             </div><!--report popup-->
 
+            <!-- Thank you Popup -->
+            <div data-role="popup" id="thanks-popup" >
+                <img id="thanks-img" src="css/images/ReportThankYou_CIRCLE.png" >
+            </div>
+
         </div><!-- /content -->
 
     </div><!-- /page -->
