modify image popup

--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@
 
                  <a href="#mainpage" data-role="button" data-mini="true" data-inline="true">Shortcut to mainpage (dev)</a>
                  <a href="#pestpage" data-role="button" data-mini="true" data-inline="true">Pest Information</a>
-                 
+
             </div>
 
         </div><!-- content-->
@@ -108,9 +108,10 @@
             </div><!--report popup-->
 
             <!-- Thank you Popup -->
-            <div data-role="popup" id="thanks-popup" >
-                <img id="thanks-img" src="css/images/ReportThankYou_CIRCLE.png" >
-            </div>
+            <div data-role="popup" id="thanks-popup" class="photopopup" data-overlay-theme="a" data-corners="false" data-tolerance="30,15">
+                <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
+                <img src="css/images/ReportThankYou_CIRCLE.png" alt="Photo portrait">
+            </div>  
 
         </div><!-- /content -->
 
