--- a/www/index.html
+++ b/www/index.html
@@ -81,10 +81,17 @@
                 <a href="#report-panel" data-icon="bars">Menu</a>
                 <h1>SnapPest</h1>
         </div>
+		
+		
 
         <!-- Page content -->
         <div role="main" class="ui-content">
-	
+		<div>
+			<a href="#pestpage" data-rel="infoPage"><div id="rabbitInfo" class="infoButton"><img class="infoButton" src="css/images/InfoButton.png"></div></a>
+			<a href="#pestpage" data-rel="infoPage"><div id="possumInfo" class="infoButton"><img class="infoButton" src="css/images/InfoButton.png"></div></a>
+			<a href="#pestpage" data-rel="infoPage"><div id="stoatInfo" class="infoButton"><img class="infoButton" src="css/images/InfoButton.png"></div></a>
+			<a href="#pestpage" data-rel="infoPage"><div id="otherInfo" class="infoButton"><img class="infoButton" src="css/images/InfoButton.png"></div></a>
+		</div>
 			<div>
                 <a href="#popupDialog" data-rel="popup"><div class="main-image" id="rabbit" ></div></a>
                 <a href="#popupDialog" data-rel="popup"><div class="main-image" id="possum" ></div></a>
