--- a/www/index.html
+++ b/www/index.html
@@ -101,16 +101,15 @@
             </div>
 
 			<!-- REPORT POPUP -->
-            <div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="a" data-dismissible="false" style="max-width:400px;" class="ui-corner-all">
-                <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+            <div data-role="popup" id="popupDialog" data-overlay-theme="none" data-theme="none" data-dismissible="false" 								style="max-width:400px;" class="ui-corner-all" data-transition="fade">
                 <div data-role="header" data-theme="a" class="ui-corner-top">
-                    <h1>Send report?</h1>
+                  
                 </div>
-                <div data-role="content" data-theme="a" class="ui-corner-bottom ui-content">
-                    <h3 class="ui-title">Are you sure you want to report a pest?</h3>
+                <div data-role="content" data-theme="none" class="ui-corner-bottom ui-content">
+                    <h3 class="ui-title"><img id="confirmReport" src="css/images/PopUpThatConfirmsReport.png"></h3>
                     <p>This action cannot be undone.</p>
-                    <a href="#" data-role="button" data-inline="true" data-rel="back">Cancel</a>
-                    <button data-inline="true" data-rel="back" id="send-report">Report pest</button>
+                    <div id="cancel"><a href="#"  data-role="button" data-inline="true" data-rel="back">Cancel</a></div>
+                    <div id="report"><button data-inline="true" data-rel="back" id="send-report"><b>Report</b></button></div>
                 </div>
             </div><!--report popup-->
 
