--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
 
 
 </head>
-<body  style="background-repeat: no-repeat; background-size: 100%;">
+<body>
 
     <!-- Start of login page, will not appear if already logged in -->
     <div data-role="page" id="login" class="ui-page">
@@ -78,7 +78,7 @@
 
         <!-- Universal header -->
         <div data-role="header" data-position="fixed">
-                <a href="#report-panel" data-icon="bars">Menu</a>
+                <a href="#pestpage" ><img src="css/images/AboutButton.png"></a>
                 <h1>SnapPest</h1>
         </div>
 		
