report page almost done

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
                 <a href="#login-panel" data-icon="bars">Menu</a>
                 <h1>SnapPest</h1>
         </div>
+		
 
         <!-- Page content -->
         <div role="main" class="ui-content" data-role="content">
@@ -46,7 +47,7 @@
 
                 <button class="FB-login" id="login-with-facebook" data-inline="true">Login with Facebook</button>
 
-                <a href="#popupFacebook" data-rel="popup" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-inline" data-transition="pop" data-position-to="window">Basic Popup</a>
+                <a href="#popupFacebook" data-rel="popup" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-inline" data-transition="fade" data-position-to="window">Basic Popup</a>
                 <div data-role="popup" id="popupFacebook" class="ui-content">
                     <h4>Your information will be kept private.</h4>
                     <p></p>
@@ -78,10 +79,10 @@
 
         <!-- Universal header -->
         <div data-role="header" data-position="fixed">
-                <a href="#pestpage" ><img src="css/images/AboutButton.png"></a>
+                <div><a href="#pestpage"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
                 <h1>SnapPest</h1>
         </div>
-		
+	
 		
 
         <!-- Page content -->
