--- a/www/index.html
+++ b/www/index.html
@@ -96,11 +96,14 @@
 
 		</div>
 			<div>
-                <a href="#popupDialog" data-rel="popup"><div class="main-image" id="rabbit" ></div></a>
-                <a href="#popupDialog" data-rel="popup"><div class="main-image" id="possum" ></div></a>
-                <a href="#popupDialog" data-rel="popup"><div class="main-image" id="stoat" ></div></a>
-                <a href="#popupDialog" data-rel="popup"><div class="main-image" id="other" ></div></a>
-                <div><img id="reportButStoat" src="css/images/reportBut.png"></div>        
+                <div class="main-image" id="rabbit" ></div>
+                <div class="main-image" id="possum" ></div>
+                <div class="main-image" id="stoat" ></div>
+                <div class="main-image" id="other" ></div>
+                <a href="#popupDialog" data-rel="popup"><img id="reportButStoat" src="css/images/reportBut.png"> </a>   
+                <a href="#popupDialog" data-rel="popup"><img id="reportButCat" src="css/images/reportBut.png"> </a>
+                <a href="#popupDialog" data-rel="popup"><img id="reportButPos" src="css/images/reportBut.png"> </a>
+                <a href="#popupDialog" data-rel="popup"><img id="reportButRat" src="css/images/reportBut.png"> </a>
             </div>
 
 			<!-- REPORT POPUP -->
