--- a/www/index.html
+++ b/www/index.html
@@ -105,14 +105,14 @@
                 <div class="main-image" id="possum" ></div>
                 <div class="main-image" id="stoat" ></div>
                 <div class="main-image" id="other" ></div>
-                <a href="#popupDialog" data-rel="popup"><img class="reportButStoat report-stoat" src="css/images/reportBut.png"> </a>   
-                <a href="#popupDialog" data-rel="popup"><img class="reportButCat report-cat" src="css/images/reportBut.png"> </a>
-                <a href="#popupDialog" data-rel="popup"><img class="reportButPos report-possum" src="css/images/reportBut.png"> </a>
-                <a href="#popupDialog" data-rel="popup"><img class="reportButRat report-rat" src="css/images/reportBut.png"> </a>
+                <a href="#popup-report-main" data-rel="popup"><img class="reportButStoat report-stoat" src="css/images/reportBut.png"> </a>   
+                <a href="#popup-report-main" data-rel="popup"><img class="reportButCat report-cat" src="css/images/reportBut.png"> </a>
+                <a href="#popup-report-main" data-rel="popup"><img class="reportButPos report-possum" src="css/images/reportBut.png"> </a>
+                <a href="#popup-report-main" data-rel="popup"><img class="reportButRat report-rat" src="css/images/reportBut.png"> </a>
             </div>
 
 			<!-- REPORT POPUP -->
-            <div data-role="popup" id="popupDialog" class="popupDialog" data-overlay-theme="none" data-theme="none" data-dismissible="false" 								style="max-width:400px;" class="ui-corner-all" data-transition="fade">
+            <div data-role="popup" id="popup-report-main" class="popupDialog" data-overlay-theme="none" data-theme="none" data-dismissible="false" 								style="max-width:400px;" class="ui-corner-all" data-transition="fade">
                 
                 <div data-role="content" data-theme="none" class="ui-corner-bottom ui-content">
                     <img id="confirmReport" src="css/images/PopUpThatConfirmsReport.png">
